--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -5,13 +5,11 @@ filter:
     excluded_paths: [vendor/*, test/*, htdocs/*]
 
 build:
-  nodes:
-    analysis:
-      tests:
-        override:
-          - php-scrutinizer-run
-
-    tests-and-coverage:
+    nodes:
+      analysis:
+        tests:
+          override:
+            - php-scrutinizer-run
         my-tests:
             environment:
                 php:
@@ -22,4 +20,4 @@ build:
                 command: "make phpunit"
                 coverage:
                     file: "build/coverage.clover"
-                    format: "php-clover 
+                    format: "php-clover"
