--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -3,14 +3,14 @@ imports:
 
 filter:
     excluded_paths: [vendor/*, test/*, htdocs/*]
-
 build:
-    nodes:
-      analysis:
-        tests:
-          override:
-            - php-scrutinizer-run
-        my-tests:
+  nodes:
+    analysis:
+      tests:
+        override:
+          - php-scrutinizer-run
+
+    tests-and-coverage:
             environment:
                 php:
                     version: 7.4
