--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -1,8 +1,9 @@
+
 imports:
     - php
 
 filter:
-    excluded_paths: [vendor/*, test/*, htdocs/*]
+    excluded_paths: [vendor/*, test/*]
 
 build:
     nodes:
